executable('wordcount', 'wordcount.cpp',
  dependencies: stdlib_dep)

executable('argparse', 'argparse.cpp',
  dependencies: stdlib_dep)

executable('globber', 'globber.cpp',
  dependencies: stdlib_dep)

executable('sorttest', 'sorttest.cpp',
  dependencies: stdlib_dep)

executable('stablesorttest', 'stablesorttest.cpp',
  dependencies: stdlib_dep)

executable('wordsort', 'wordsort.cpp',
  dependencies: stdlib_dep)
